[package]
name = "aws"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "^0.1"
derive_builder = "*"
dyn-clone = "1.0.4"
aws-sdk-s3 = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.16-alpha", package = "aws-sdk-s3" }
dotenv = "0.15.0"

luminary = { path = "../luminary" }

