[package]
edition = "2018"
name = "luminary-bin"
version = "0.1.0"

[dependencies]
tokio = { version = "1", features = ["full"] }

tracing = "0.1.29"
tracing-subscriber = { version = "0.3.1", features = ["env-filter"] }
tracing-log = "0.1.2"

aws = { path = "../aws" }
luminary = { path = "../luminary" }
